# irnas-zephyr-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc  CMakeLists.txt  Kconfig  README.md  codechecker_config.yaml  committed.toml  east.yml  east_pack_idea.md  makefile  twister_config.yaml  typos.toml  west.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yaml  codechecker.yaml  create-release.yaml  label_pr.yaml  pre-commit.yaml  publish-release.yaml  twister.yaml
app/: CMakeLists.txt  Kconfig  README.md  VERSION  debug.conf  prj.conf  rtt.conf  sample.yaml  sysbuild.conf  sysbuild_dev.conf  uart.conf
app/conf/: common.conf  debug.conf  prj.conf  rtt.conf  uart.conf  with_mcuboot.conf
app/src/: main.c
app/sysbuild/: mcuboot.conf
doc/: README.md
doc/development/: README.md  release.md  setup.md  signing_keys.md  twister.md  unit_tests.md  west_yml_usage.md
lib/: CMakeLists.txt  Kconfig
lib/example_lib/: CMakeLists.txt  Kconfig  example_lib.c  example_lib.h
lib/fancy_ztest/: Kconfig  tc_util_user_override.h
samples/blinky/: README.md  sample.yaml
samples/renode_example/: CMakeLists.txt  README.md  prj.conf  test-nrf52840dk.robot
scripts/: codechecker-diff.sh  create_signing_keys.sh  requirements.txt  update_docker_versions.sh  update_west_yml.sh
tests/: README.md
tests/sample_test/: CMakeLists.txt  prj.conf  testcase.yaml
tests/sample_test/src/: main.c
(+28 files in other folders)
